# prog_maths_2022

./: README.md
libRational/: CMakeLists.txt
myExamples/: CMakeLists.txt
projet_prog_maths_2022-main/: CMakeLists.txt  README.md
projet_prog_maths_2022-main/libRational/doc/: CMakeLists.txt  Doxyfile-html.cmake
projet_prog_maths_2022-main/libRational/include/: Rational.hpp
projet_prog_maths_2022-main/libRational/src/: Rational.cpp
projet_prog_maths_2022-main/myExamples/src/: main.cpp
unitTests/: CMakeLists.txt
unitTests/src/: unitTests.cpp
